--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,6 +45,32 @@
         - "."
   ignore_errors: true
 
+- name: groupadd
+  group:
+    name: "gitlab-runner"
+    system: true
+    state: "present"
+
+- name: useradd
+  user:
+    name: "gitlab-runner"
+    group: "gitlab-runner"
+    home: "/home/gitlab-runner"
+    shell: "/bin/bash"
+    system: true
+    create_home: false
+    state: "present"
+
+- name: prepare directories
+  file:
+    dest: "{{ item.dest }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0755') }}"
+    state: "{{ item.state | default('directory') }}"
+  loop:
+    - { dest: "/home/gitlab-runner", owner: "gitlab-runner", group: "gitlab-runner" }
+
 - name: flush handlers
   meta: flush_handlers
 
