--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -43,6 +43,18 @@ gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 # Use this image to run builds.
 gitlab_runner_runners_custom_image: "alvistack/gitlab-runner:latest"
 
+# String value of number of CPUs (available in Docker 1.13 or later).
+gitlab_runner_runners_custom_cpus: "2"
+
+# String value containing the memory limit.
+gitlab_runner_runners_custom_memory: "8192m"
+
+# String value containing the total memory limit.
+gitlab_runner_runners_custom_memory_swap: "8192m"
+
+# Make container run in Privileged mode (insecure).
+gitlab_runner_runners_custom_privileged: true
+
 # Path to an executable to allow the user to override some configuration
 # settings before the build starts.
 gitlab_runner_runners_custom_config_exec: "/home/gitlab-runner/bin/config.sh"
