--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,7 +23,7 @@ gitlab_runner_concurrent: 1
 gitlab_runner_check_interval: 0
 
 # The Runner’s description, just informatory.
-gitlab_runner_runners_name: "alvistack/gitlab-runner:latest"
+gitlab_runner_runners_name: "alvistack/gitlab-runner"
 
 # GitLab URL.
 gitlab_runner_runners_url: "https://gitlab.com/"
@@ -41,30 +41,29 @@ gitlab_runner_runners_builds_dir: "/home/gitlab-runner"
 gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 
 # Use this image to run builds.
-gitlab_runner_runners_custom_image: "alvistack/gitlab-runner:latest"
+gitlab_runner_runners_docker_image: "alvistack/gitlab-runner:latest"
 
 # String value of number of CPUs (available in Docker 1.13 or later).
-gitlab_runner_runners_custom_cpus: "2"
+gitlab_runner_runners_docker_cpus: "2"
 
 # String value containing the memory limit.
-gitlab_runner_runners_custom_memory: "8192m"
+gitlab_runner_runners_docker_memory: "8192m"
 
 # String value containing the total memory limit.
-gitlab_runner_runners_custom_memory_swap: "8192m"
+gitlab_runner_runners_docker_memory_swap: "8192m"
 
 # Make container run in Privileged mode (insecure).
-gitlab_runner_runners_custom_privileged: true
+gitlab_runner_runners_docker_privileged: true
 
-# Path to an executable to allow the user to override some configuration
-# settings before the build starts.
-gitlab_runner_runners_custom_config_exec: "/home/gitlab-runner/bin/config.sh"
+# Share additional host devices with the container.
+gitlab_runner_runners_docker_devices:
+  - "/dev/kvm"
+  - "/dev/net/tun"
+  - "/dev/vhost-net"
 
-# Path to an executable to prepare the environment.
-gitlab_runner_runners_custom_prepare_exec: "/home/gitlab-runner/bin/prepare.sh"
-
-# Path to an executable to run scripts in the environments. For example,
-# the clone and build script. 
-gitlab_runner_runners_custom_run_exec: "/home/gitlab-runner/bin/run.sh"
-
-# Path to an executable to clean up the environment.
-gitlab_runner_runners_custom_cleanup_exec: "/home/gitlab-runner/bin/cleanup.sh"
+# Specify additional volumes that should be mounted (same syntax as Docker’s -v flag).
+gitlab_runner_runners_docker_volumes:
+  - "/root/.vagrant.d/boxes:/root/.vagrant.d/boxes"
+  - "/var/cache/gitlab-runner:/var/cache/gitlab-runner"
+  - "/var/run/docker.sock:/var/run/docker.sock"
+  - "/var/run/libvirt/libvirt-sock:/var/run/libvirt/libvirt-sock"
