--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,12 +38,12 @@ gitlab_runner_runners_builds_dir: "/home/vagrant"
 # Absolute path to a directory where build caches will be stored in context
 # of selected executor (locally, Docker, SSH). If the docker executor is used,
 # this directory needs to be included in its volumes parameter.
-gitlab_runner_runners_cache_dir: "/home/vagrant/.cache"
+gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 
 # Use this image to run builds.
-gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner"
+gitlab_runner_runners_vagrant_image: "generic/ubuntu2004"
 
-# String value of number of CPUs (available in Docker 1.13 or later).
+# String value of number of CPUs.
 gitlab_runner_runners_vagrant_cpus: "4"
 
 # String value containing the memory limit.
@@ -52,7 +52,17 @@ gitlab_runner_runners_vagrant_memory: "16384"
 # Make container run in Nested mode.
 gitlab_runner_runners_vagrant_nested: true
 
+# Name of Libvirt network to which all VMs will be connected.
+gitlab_runner_runners_vagrant_management_network_name: "gitlab-runner"
+
+# Address of network to which all VMs will be connected. Must include
+# the address and subnet mask.
+gitlab_runner_runners_vagrant_management_network_address: "172.16.121.0/24"
+
+# Absolute path to a directory where Vagrant box caches will be stored.
+gitlab_runner_runners_vagrant_boxes_dir: "/home/vagrant/.vagrant.d/boxes"
+
 # Specify additional volumes that should be mounted.
 gitlab_runner_runners_vagrant_synced_folders:
-  - { src: "/home/vagrant/.cache", dest: "/home/vagrant/.cache" }
-  - { src: "/home/vagrant/.vagrant.d/boxes", dest: "/home/vagrant/.vagrant.d/boxes" }
+  - { src: "{{ gitlab_runner_runners_cache_dir }}", dest: "{{ gitlab_runner_runners_cache_dir }}", type: "9p" }
+  - { src: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", dest: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", type: "9p" }
