--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,7 +41,7 @@ gitlab_runner_runners_builds_dir: "/home/vagrant"
 gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 
 # Use this image to run builds.
-gitlab_runner_runners_vagrant_image: "generic/ubuntu2004"
+gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner"
 
 # String value of number of CPUs.
 gitlab_runner_runners_vagrant_cpus: "4"
