--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,7 +26,7 @@ gitlab_runner_check_interval: "0"
 gitlab_runner_runners_name: "alvistack/gitlab-runner"
 
 # GitLab URL.
-gitlab_runner_runners_url: "https://gitlab.com/"
+gitlab_runner_runners_url: ~
 
 # The Runner’s special token (not to be confused with the registration token).
 gitlab_runner_runners_token: ~
@@ -64,5 +64,7 @@ gitlab_runner_runners_vagrant_boxes_dir: "/home/vagrant/.vagrant.d/boxes"
 
 # Specify additional volumes that should be mounted.
 gitlab_runner_runners_vagrant_synced_folders:
-  - { src: "{{ gitlab_runner_runners_cache_dir }}", dest: "{{ gitlab_runner_runners_cache_dir }}", type: "9p" }
-  - { src: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", dest: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", type: "9p" }
+  - { src: ".", dest: "/vagrant", disabled: true }
+  - { src: ".", dest: "{{ gitlab_runner_runners_builds_dir }}" }
+  - { src: "{{ gitlab_runner_runners_cache_dir }}", dest: "{{ gitlab_runner_runners_cache_dir }}" }
+  - { src: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", dest: "{{ gitlab_runner_runners_vagrant_boxes_dir }}" }
