--- a/vars/ubuntu-20.10.yml
+++ b/vars/ubuntu-20.10.yml
@@ -25,5 +25,5 @@ _apt_repository:
 
 _apt:
   - { state: "latest", name: "ca-certificates" }
-  - { state: "latest", name: "gitlab-runner" }
   - { state: "latest", name: "openssh-client" }
+  - { state: "present", name: "gitlab-runner={{ gitlab_runner_version }}" }
