--- a/vars/suse-15.yml
+++ b/vars/suse-15.yml
@@ -37,5 +37,5 @@ _yum_repository:
 
 _zypper:
   - { state: "latest", name: "ca-certificates" }
-  - { state: "latest", name: "openssh-clients" }
-  - { state: "present", name: "gitlab-runner={{ gitlab_runner_version }}-1" }
+  - { state: "latest", name: "openssh" }
+  - { state: "present", name: "gitlab-runner-{{ gitlab_runner_version }}-1" }
