/etc/cron.hourly/gitlab-runner

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,6 +53,7 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
+    - { dest: "/etc/cron.hourly" }
     - { dest: "/etc/gitlab-runner" }
     - { dest: "/lib/systemd/system" }
     - { dest: "/opt/gitlab-runner/executors/vagrant" }
@@ -67,6 +68,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   loop:
+    - { dest: "/etc/cron.hourly/gitlab-runner" }
     - { dest: "/etc/gitlab-runner/config.toml" }
     - { dest: "/lib/systemd/system/gitlab-runner.service" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
@@ -85,6 +87,7 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
+    - { dest: "/etc/cron.hourly/gitlab-runner" }
     - { dest: "/etc/gitlab-runner/config.toml" }
     - { dest: "/etc/systemd/system/gitlab-runner.service", state: "absent" }
     - { dest: "/lib/systemd/system/gitlab-runner.service" }
