--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -57,8 +57,8 @@
     - { dest: "/etc/gitlab-runner" }
     - { dest: "/lib/systemd/system" }
     - { dest: "/opt/gitlab-runner/executors/vagrant" }
-    - { dest: "{{ gitlab_runner_runners_cache_dir }}", owner: "vagrant", group: "vagrant" }
-    - { dest: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", owner: "vagrant", group: "vagrant" }
+    - { dest: "{{ gitlab_runner_runners_cache_dir }}", owner: "1000", group: "1000" }
+    - { dest: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", owner: "1000", group: "1000" }
 
 - name: copy templates
   template:
