https://github.com/ansible-community/ansible-lint/releases/tag/v5.0.3

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -18,18 +18,22 @@
   remote_user: root
   become: true
   tasks:
-    - include_role:
+    - name: include role
+      include_role:
         name: git
       tags: git
 
-    - include_role:
+    - name: include role
+      include_role:
         name: vagrant
       tags: vagrant
 
-    - include_role:
+    - name: include role
+      include_role:
         name: libvirt
       tags: libvirt
 
-    - include_role:
+    - name: include role
+      include_role:
         name: gitlab_runner
       tags: gitlab_runner
