--- a/vars/main.yml
+++ b/vars/main.yml
@@ -13,3 +13,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+_gitlab_runner_version:
+  "13.11": "13.11.0"
+  "13.10": "13.10.0"
