--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,6 +48,9 @@ gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 # Use this image to run builds.
 gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner-{{ gitlab_release }}"
 
+# Use this box to run builds.
+gitlab_runner_runners_vagrant_box: "alvistack/gitlab-runner-{{ gitlab_release }}"
+
 # String value of number of CPUs.
 gitlab_runner_runners_vagrant_cpus: "4"
 
