--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,7 +61,7 @@
   loop:
     - { dest: "/etc/cron.hourly" }
     - { dest: "/etc/gitlab-runner" }
-    - { dest: "/etc/systemd/system" }
+    - { dest: "/lib/systemd/system" }
     - { dest: "/opt/gitlab-runner/executors/vagrant" }
     - { dest: "{{ gitlab_runner_runners_cache_dir }}", owner: "1000", group: "1000" }
     - { dest: "{{ gitlab_runner_runners_vagrant_boxes_dir }}", owner: "1000", group: "1000" }
@@ -76,7 +76,7 @@
   loop:
     - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
     - { dest: "/etc/gitlab-runner/config.toml" }
-    - { dest: "/etc/systemd/system/gitlab-runner.service" }
+    - { dest: "/lib/systemd/system/gitlab-runner.service" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/config.sh", mode: "0755" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/prepare.sh", mode: "0755" }
@@ -95,7 +95,8 @@
   loop:
     - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
     - { dest: "/etc/gitlab-runner/config.toml" }
-    - { dest: "/etc/systemd/system/gitlab-runner.service" }
+    - { dest: "/etc/systemd/system/gitlab-runner.service", state: "absent" }
+    - { dest: "/lib/systemd/system/gitlab-runner.service" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/config.sh", mode: "0755" }
     - { dest: "/opt/gitlab-runner/executors/vagrant/prepare.sh", mode: "0755" }
