--- a/vars/debian-11.yml
+++ b/vars/debian-11.yml
@@ -20,7 +20,7 @@ _apt_key:
     state: "present"
 
 _apt_repository:
-  - repo: "deb http://packages.gitlab.com/runner/gitlab-runner/debian bullseye main"
+  - repo: "deb http://packages.gitlab.com/runner/gitlab-runner/debian buster main"
     state: "present"
 
 _apt:
