Restrict package to a fixed version

--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -38,7 +38,7 @@
 
 - name: yum versionlock delete
   community.general.yum_versionlock:
-    name: "{{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '') }}"
+    name: "{{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '*') }}"
     state: "absent"
   loop: "{{ _yum }}"
   when: gitlab_runner_version in item.name
@@ -57,7 +57,7 @@
 
 - name: yum versionlock add
   community.general.yum_versionlock:
-    name: "{{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '') }}"
+    name: "{{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '*') }}"
     state: "present"
   loop: "{{ _yum }}"
   when: gitlab_runner_version in item.name
