--- a/vars/suse-15.2.yml
+++ b/vars/suse-15.2.yml
@@ -38,4 +38,4 @@ _yum_repository:
 _zypper:
   - { state: "latest", name: "ca-certificates" }
   - { state: "latest", name: "openssh" }
-  - { state: "present", name: "gitlab-runner-{{ gitlab_runner_version }}-1" }
+  - { state: "present", name: "gitlab-runner-{{ gitlab_runner_version }}" }
