--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -38,10 +38,10 @@
 
 - name: yum versionlock delete
   community.general.yum_versionlock:
-    name: "{{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '*') }}"
+    name: "{{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\\..*$', '\\1-*') }}"
     state: "absent"
   loop: "{{ _yum }}"
-  when: gitlab_runner_version in item.name
+  when: item.state == "present"
   changed_when: false
   failed_when: false
 
@@ -57,9 +57,9 @@
 
 - name: yum versionlock add
   community.general.yum_versionlock:
-    name: "{{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '*') }}"
+    name: "{{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\\..*$', '\\1-*') }}"
     state: "present"
   loop: "{{ _yum }}"
-  when: gitlab_runner_version in item.name
+  when: item.state == "present"
   changed_when: false
   failed_when: false
