--- a/tasks/suse.yml
+++ b/tasks/suse.yml
@@ -40,9 +40,9 @@
   loop: "{{ _yum_repository }}"
 
 - name: zypper removelock
-  command: zypper removelock {{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '') }}
+  command: zypper removelock {{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\..*$', '\1-*') }}
   loop: "{{ _zypper }}"
-  when: gitlab_runner_version in item.name
+  when: item.state == "present"
   changed_when: false
   failed_when: false
 
@@ -59,8 +59,8 @@
     - gitlab_runner | systemctl restart gitlab-runner.service
 
 - name: zypper addlock
-  command: zypper addlock {{ item.name | regex_replace('.' + gitlab_runner_version + '.*', '') }}
+  command: zypper addlock {{ item.name | regex_replace('^(.*)-[0-9]*:*[0-9]+\..*$', '\1-*') }}
   loop: "{{ _zypper }}"
-  when: gitlab_runner_version in item.name
+  when: item.state == "present"
   changed_when: false
   failed_when: false
