--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,10 +18,10 @@
 vagrant_default_provider: "libvirt"
 
 # GitLab release.
-gitlab_release: "14.2"
+gitlab_runner_release: "14.2"
 
 # GitLab Runner version.
-gitlab_runner_version: "{{ _gitlab_runner_version[gitlab_release] }}"
+gitlab_runner_version: "{{ _gitlab_runner_version[gitlab_runner_release] }}"
 
 # Limits how many jobs globally can be run concurrently. The most upper limit
 # of jobs using all defined runners. 0 does not mean unlimited.
@@ -41,10 +41,10 @@ gitlab_runner_runners:
 gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 
 # Use this image to run builds.
-gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner-{{ gitlab_release }}"
+gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner-{{ gitlab_runner_release }}"
 
 # Use this box to run builds.
-gitlab_runner_runners_vagrant_box: "alvistack/gitlab-runner-{{ gitlab_release }}"
+gitlab_runner_runners_vagrant_box: "alvistack/gitlab-runner-{{ gitlab_runner_release }}"
 
 # String value of number of CPUs.
 gitlab_runner_runners_vagrant_cpus: "4"
