--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -19,21 +19,21 @@
   become: true
   tasks:
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: git
       tags: git
 
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: vagrant
       tags: vagrant
 
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: libvirt
       tags: libvirt
 
     - name: include role
-      include_role:
+      ansible.builtin.include_role:
         name: gitlab_runner
       tags: gitlab_runner
