--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -18,12 +18,7 @@
   remote_user: root
   become: true
   tasks:
-    - name: ansible --version
-      ansible.builtin.command: ansible --version
-      register: result
-      changed_when: result is not succeeded
-
-    - name: ansible-lint --version
-      ansible.builtin.command: ansible-lint --version
+    - name: gitlab-runner --version
+      ansible.builtin.command: gitlab-runner --version
       register: result
       changed_when: result is not succeeded
