--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -69,4 +69,6 @@ gitlab_runner_runners_vagrant_management_network_address: "172.16.121.0/24"
 # Specify additional volumes that should be mounted.
 gitlab_runner_runners_vagrant_synced_folders:
   - { src: "./", dest: "/vagrant" }
+  - { src: "/home/vagrant/.vagrant.d/boxes", dest: "/home/vagrant/.vagrant.d/boxes" }
+  - { src: "/var/lib/containers/storage", dest: "/var/lib/containers/storage" }
   - { src: "{{ gitlab_runner_runners_cache_dir }}", dest: "/var/cache/gitlab-runner" }
