--- a/vars/fedora-35.yml
+++ b/vars/fedora-35.yml
@@ -21,7 +21,7 @@ _rpm_key:
   - key: "http://packages.gitlab.com/runner/gitlab-runner/gpgkey/runner-gitlab-runner-4C80FB51394521E9.pub.gpg"
     fingerprint: "09E57083F34CCA94D541BC58A674BF8135DFA027"
     state: "present"
-  - key: "http://download.opensuse.org/repositories/home:/alvistack/Fedora_35/repodata/repomd.xml.key"
+  - key: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/Fedora_35/repodata/repomd.xml.key"
     fingerprint: "789CFFDE0295B8A1F4E5690C4BECC97550D0B1FD"
     state: "present"
 
@@ -41,12 +41,12 @@ _yum_repository:
   - file: "home:alvistack"
     name: "home_alvistack"
     description: "home:alvistack (Fedora_35)"
-    baseurl: "http://download.opensuse.org/repositories/home:/alvistack/Fedora_35"
+    baseurl: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/Fedora_35"
     enabled: true
     priority: "2"
     module_hotfixes: true
     gpgcheck: true
-    gpgkey: "http://download.opensuse.org/repositories/home:/alvistack/Fedora_35/repodata/repomd.xml.key"
+    gpgkey: "http://downloadcontent.opensuse.org/repositories/home:/alvistack/Fedora_35/repodata/repomd.xml.key"
     state: "present"
 
 _yum:
