--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,8 +47,15 @@ gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
 # Use this image to run builds.
 gitlab_runner_runners_vagrant_image: "alvistack/gitlab-runner-{{ gitlab_runner_release }}"
 
+# If true, the image will be pulled on every up and reload.
+gitlab_runner_runners_vagrant_pull: false
+
 # Use this box to run builds.
 gitlab_runner_runners_vagrant_box: "alvistack/gitlab-runner-{{ gitlab_runner_release }}"
+
+# If true, Vagrant will check for updates to the configured box on every
+# vagrant up.
+gitlab_runner_runners_vagrant_box_check_update: false
 
 # String value of number of CPUs.
 gitlab_runner_runners_vagrant_cpus: "8"
