--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -20,6 +20,7 @@
   become: true
   tasks:
     - name: gitlab-runner --version
-      ansible.builtin.command: gitlab-runner --version
+      ansible.builtin.command:
+        cmd: gitlab-runner --version
       register: result
       changed_when: result is not succeeded
