ERROR 429: Too Many Requests
    Reusing existing connection to app.vagrantup.com:443.
    HTTP request sent, awaiting response...
      HTTP/1.1 429 Too Many Requests
      Server: Cowboy
      Date: Mon, 21 Nov 2022 09:06:00 GMT
      Connection: keep-alive
      X-Vagrantcloud-Hostedboxesdaily-Limit: 0/100
      X-Vagrantcloud-Hostedboxesdaily-Retry-After: 1669075200
      Retry-After: 1669075200
      Cache-Control: no-cache
      X-Request-Id: 0747ee41-9295-4940-9682-69e8db80dd7f
      X-Runtime: 0.046057
      Transfer-Encoding: chunked
      Via: 1.1 vegur
    2022-11-21 17:06:01 ERROR 429: Too Many Requests.

See https://developer.hashicorp.com/vagrant/vagrant-cloud/request-limits

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -110,7 +110,7 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
-    - { dest: "/etc/cron.hourly" }
+    - { dest: "/etc/cron.daily" }
   when: inventory_hostname == ansible_play_hosts[0]
 
 - name: copy templates
@@ -121,7 +121,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   loop:
-    - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
+    - { dest: "/etc/cron.daily/gitlab-runner", mode: "0755" }
   when: inventory_hostname == ansible_play_hosts[0]
 
 - name: prepare files
@@ -132,7 +132,7 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
-    - { dest: "/etc/cron.hourly/gitlab-runner", mode: "0755" }
+    - { dest: "/etc/cron.daily/gitlab-runner", mode: "0755" }
   when: inventory_hostname == ansible_play_hosts[0]
 
 - name: flush handlers
