--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@
 # limitations under the License.
 
 # This configures the default provider Vagrant will use.
-vagrant_default_provider: "libvirt"
+vagrant_default_provider: libvirt
 
 # GitLab release.
 gitlab_runner_release: "16.9"
@@ -33,19 +33,19 @@ gitlab_runner_check_interval: "0"
 
 # Each [[runners]] section defines one runner.
 gitlab_runner_runners:
-  - { name: "alvistack/gitlab-runner", url: ~, token: ~ }
+  - { name: alvistack/gitlab-runner, url: !!null "", token: !!null "" }
 
 # Absolute path to a directory where builds are stored in the context of
 # the selected executor. For example, locally, Docker, or SSH.
-gitlab_runner_runners_builds_dir: "/home/vagrant"
+gitlab_runner_runners_builds_dir: /home/vagrant
 
 # Absolute path to a directory where build caches will be stored in context
 # of selected executor (locally, Docker, SSH). If the docker executor is used,
 # this directory needs to be included in its volumes parameter.
-gitlab_runner_runners_cache_dir: "/var/cache/gitlab-runner"
+gitlab_runner_runners_cache_dir: /var/cache/gitlab-runner
 
 # Use this box to run builds.
-gitlab_runner_runners_vagrant_box: "alvistack/devel-22.04"
+gitlab_runner_runners_vagrant_box: alvistack/devel-22.04
 
 # If true, Vagrant will check for updates to the configured box on every
 # vagrant up.
@@ -61,14 +61,14 @@ gitlab_runner_runners_vagrant_memory: "32768"
 gitlab_runner_runners_vagrant_nested: true
 
 # Name of Libvirt network to which all VMs will be connected.
-gitlab_runner_runners_vagrant_management_network_name: "gitlab-runner"
+gitlab_runner_runners_vagrant_management_network_name: gitlab-runner
 
 # Address of network to which all VMs will be connected. Must include
 # the address and subnet mask.
-gitlab_runner_runners_vagrant_management_network_address: "172.16.121.0/24"
+gitlab_runner_runners_vagrant_management_network_address: 172.16.121.0/24
 
 # Specify additional volumes that should be mounted.
 gitlab_runner_runners_vagrant_synced_folders:
-  - { src: "./", dest: "/vagrant" }
-  - { src: "/home/vagrant/.vagrant.d/boxes", dest: "/home/vagrant/.vagrant.d/boxes" }
-  - { src: "{{ gitlab_runner_runners_cache_dir }}", dest: "/var/cache/gitlab-runner" }
+  - { src: ./, dest: /vagrant }
+  - { src: /home/vagrant/.vagrant.d/boxes, dest: /home/vagrant/.vagrant.d/boxes }
+  - { src: "{{ gitlab_runner_runners_cache_dir }}", dest: /var/cache/gitlab-runner }
