--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,4 @@
 ---
-
 # Copyright 2024 Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -22,8 +21,8 @@
 
 - name: gitlab_runner | systemctl restart gitlab-runner.service
   ansible.builtin.service:
-    name: "gitlab-runner.service"
-    state: "restarted"
+    name: gitlab-runner.service
+    state: restarted
     enabled: true
   loop: "{{ ansible_play_hosts }}"
   delegate_to: "{{ item }}"
