--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 # Copyright 2024 Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,7 +14,7 @@
 # limitations under the License.
 
 - name: include default variables
-  ansible.builtin.include_vars: "../vars/main.yml"
+  ansible.builtin.include_vars: ../vars/main.yml
 
 - name: include release specific variables
   ansible.builtin.include_vars: "{{ _loop_var }}"
@@ -32,7 +31,7 @@
         - "{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version | lower }}.yml"
         - "{{ ansible_os_family | lower }}.yml"
       paths:
-        - "../vars"
+        - ../vars
       skip: true
 
 - name: include release specific tasks
@@ -50,7 +49,7 @@
         - "{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version | lower }}.yml"
         - "{{ ansible_os_family | lower }}.yml"
       paths:
-        - "."
+        - .
       skip: true
 
 - name: prepare directories
@@ -61,9 +60,9 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
-    - { dest: "/etc/gitlab-runner" }
-    - { dest: "/etc/systemd/system" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant" }
+    - { dest: /etc/gitlab-runner }
+    - { dest: /etc/systemd/system }
+    - { dest: /opt/gitlab-runner/executors/vagrant }
     - { dest: "{{ gitlab_runner_runners_cache_dir }}", owner: "1000", group: "1000" }
 
 - name: copy templates
@@ -74,12 +73,12 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   loop:
-    - { dest: "/etc/gitlab-runner/config.toml" }
-    - { dest: "/etc/systemd/system/gitlab-runner.service" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/config.sh", mode: "0755" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/prepare.sh", mode: "0755" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/run.sh", mode: "0755" }
+    - { dest: /etc/gitlab-runner/config.toml }
+    - { dest: /etc/systemd/system/gitlab-runner.service }
+    - { dest: /opt/gitlab-runner/executors/vagrant/cleanup.sh, mode: "0755" }
+    - { dest: /opt/gitlab-runner/executors/vagrant/config.sh, mode: "0755" }
+    - { dest: /opt/gitlab-runner/executors/vagrant/prepare.sh, mode: "0755" }
+    - { dest: /opt/gitlab-runner/executors/vagrant/run.sh, mode: "0755" }
   notify:
     - gitlab_runner | systemctl daemon-reload
     - gitlab_runner | systemctl restart gitlab-runner.service
@@ -92,12 +91,12 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
-    - { dest: "/etc/gitlab-runner/config.toml" }
-    - { dest: "/etc/systemd/system/gitlab-runner.service" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/cleanup.sh", mode: "0755" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/config.sh", mode: "0755" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/prepare.sh", mode: "0755" }
-    - { dest: "/opt/gitlab-runner/executors/vagrant/run.sh", mode: "0755" }
+    - { dest: /etc/gitlab-runner/config.toml }
+    - { dest: /etc/systemd/system/gitlab-runner.service }
+    - { dest: /opt/gitlab-runner/executors/vagrant/cleanup.sh, mode: "0755" }
+    - { dest: /opt/gitlab-runner/executors/vagrant/config.sh, mode: "0755" }
+    - { dest: /opt/gitlab-runner/executors/vagrant/prepare.sh, mode: "0755" }
+    - { dest: /opt/gitlab-runner/executors/vagrant/run.sh, mode: "0755" }
   notify:
     - gitlab_runner | systemctl daemon-reload
     - gitlab_runner | systemctl restart gitlab-runner.service
@@ -110,7 +109,7 @@
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
   loop:
-    - { dest: "/etc/cron.daily" }
+    - { dest: /etc/cron.daily }
   when: inventory_hostname == ansible_play_hosts[0]
 
 - name: copy templates
@@ -121,7 +120,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
   loop:
-    - { dest: "/etc/cron.daily/gitlab-runner", mode: "0755" }
+    - { dest: /etc/cron.daily/gitlab-runner, mode: "0755" }
   when: inventory_hostname == ansible_play_hosts[0]
 
 - name: prepare files
@@ -132,8 +131,8 @@
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
   loop:
-    - { dest: "/etc/cron.daily/gitlab-runner", mode: "0755" }
-    - { dest: "/etc/cron.hourly/gitlab-runner", state: "absent" }
+    - { dest: /etc/cron.daily/gitlab-runner, mode: "0755" }
+    - { dest: /etc/cron.hourly/gitlab-runner, state: absent }
   when: inventory_hostname == ansible_play_hosts[0]
 
 - name: flush handlers
@@ -141,8 +140,8 @@
 
 - name: systemctl start gitlab-runner.service
   ansible.builtin.service:
-    name: "gitlab-runner.service"
-    state: "started"
+    name: gitlab-runner.service
+    state: started
     enabled: true
   changed_when: false
   failed_when: false
